--- a/k8s/lb-config.yaml
+++ b/k8s/lb-config.yaml
@@ -13,6 +13,12 @@ data:
         # Load configuration files for the default server block.
         include /etc/nginx/default.d/*.conf;
 
+        location / {
+            proxy_pass https://storage.googleapis.com/formuladb-static-assets/portal/public/;
+            error_page 404 = @root_fallback;
+            proxy_intercept_errors on;
+        }
+
         location /formuladb-api {
             proxy_pass http://be:8084/formuladb-api;
         }
@@ -28,18 +34,6 @@ data:
 
         location ~* /formuladb/(.*)$ {
             proxy_pass https://storage.googleapis.com/formuladb-static-assets/fe/$1;
-        }
-
-        location ~* (/assets/.+(?<!\.html))$ {
-            proxy_pass https://storage.googleapis.com/formuladb-static-assets/portal/public/$1;
-            error_page 404 = @root_fallback;
-            proxy_intercept_errors on;
-        }
-
-        location ~* (/.+(?<!\.html))$ {
-            proxy_pass https://storage.googleapis.com/formuladb-static-assets/$1;
-            error_page 404 = @root_fallback;
-            proxy_intercept_errors on;
         }
 
         error_page 404 /404.html;
