--- a/k8s/lb-config.yaml
+++ b/k8s/lb-config.yaml
@@ -14,7 +14,8 @@ data:
         include /etc/nginx/default.d/*.conf;
 
         location / {
-            proxy_pass https://storage.googleapis.com/formuladb-static-assets/portal/public/;
+            #todo parameterize branch name "develop"
+            proxy_pass https://storage.googleapis.com/formuladb-static-assets/develop;
             error_page 404 = @root_fallback;
             proxy_intercept_errors on;
         }
