--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -129,6 +129,7 @@ e2e_dev_env:
     - TARGET=headless protractor --baseUrl='http://localhost:8081' e2e/protractor.conf.js
     - /bin/bash -c '/usr/bin/killall -q kubectl; exit 0'
     - ps -ef|grep 'bash serve.sh'|awk '{print $2}'|xargs kill
+    - skaffold delete
   cache:
     key: ${CI_COMMIT_SHORT_SHA}
     paths:
@@ -258,7 +259,6 @@ e2e_production_env:
 cleanup:
   stage: cleanup
   script:
-#    - docker-compose down
     - docker system prune -af
 #    - killall node --quiet || true
     - find /home/gitlab-runner/cache/ -type f -mmin +60 -delete
