--- a/k8s/base/resources/lb-config.yaml
+++ b/k8s/base/resources/lb-config.yaml
@@ -4,44 +4,75 @@ metadata:
   name: nginx-conf
 data:
   nginx.conf: |
-    server {
-        listen         80;
-        server_name  formuladb.online www.formuladb.online formuladb.io www.formuladb.io;
-        root         /usr/share/nginx/html;
-        rewrite  ^/$  /index.html  last;
+    worker_processes  2;
+    load_module /usr/lib/nginx/modules/ngx_http_perl_module.so;
 
-        # Load configuration files for the default server block.
-        include /etc/nginx/default.d/*.conf;
+    env BRANCH_NAME;
 
-        location / {
-            set_by_lua $branch_name 'return os.getenv("BRANCH_NAME")';
-            proxy_pass https://storage.googleapis.com/formuladb-static-assets/${brach_name};
-            error_page 404 = @root_fallback;
-            proxy_intercept_errors on;
+    events {
+        worker_connections  10240;
+    }
+
+    http {
+        include       /etc/nginx/mime.types;
+        default_type  application/octet-stream;
+
+        log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
+                        '$status $body_bytes_sent "$http_referer" '
+                        '"$http_user_agent" "$http_x_forwarded_for"';
+
+        access_log  /var/log/nginx/access.log  main;
+
+        sendfile        on;
+
+        keepalive_timeout  65;
+
+        perl_set $branchname 'sub { return $ENV{"BRANCH_NAME"}; }';
+
+        upstream googlestorage {
+            server storage.googleapis.com:443;
+            keepalive 128;
         }
 
-        location /formuladb-api {
-            proxy_pass http://be:8084/formuladb-api;
-        }
+        server {
+            listen         80;
+            server_name  formuladb.online www.formuladb.online formuladb.io www.formuladb.io;
+            root         /usr/share/nginx/html;
+            rewrite  ^/$  /index.html  last;
 
-        location @root_fallback {
-            proxy_pass http://be:8084;
-        }
+            location / {
+                proxy_set_header    Host storage.googleapis.com;
+                proxy_pass https://googlestorage/formuladb-static-assets/$branchname$uri;
+                proxy_intercept_errors on;
 
-        # case-insensitive matching
-        location ~* /formuladb-editor/(.*)$ {
-            proxy_pass https://storage.googleapis.com/formuladb-static-assets/vvvebjs/$1;
-        }
+                error_page 404 = @root_fallback;
+            }
 
-        location ~* /formuladb/(.*)$ {
-            proxy_pass https://storage.googleapis.com/formuladb-static-assets/fe/$1;
-        }
+            location /formuladb-api {
+                proxy_pass http://be:8084/formuladb-api;
+            }
 
-        error_page 404 /404.html;
-            location = /40x.html {
-        }
+            location @root_fallback {
+                proxy_pass http://be:8084;
+            }
 
-        error_page 500 502 503 504 /50x.html;
-            location = /50x.html {
+            # case-insensitive matching
+            location ~* /formuladb-editor/(.*)$ {
+                proxy_set_header    Host storage.googleapis.com;
+                proxy_pass https://googlestorage/formuladb-static-assets/vvvebjs/$1;
+            }
+
+            location ~* /formuladb/(.*)$ {
+                proxy_set_header    Host storage.googleapis.com;
+                proxy_pass https://googlestorage/formuladb-static-assets/fe/$1;
+            }
+
+            error_page 404 /404.html;
+                location = /40x.html {
+            }
+
+            error_page 500 502 503 504 /50x.html;
+                location = /50x.html {
+            }
         }
     }
