--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -129,7 +129,7 @@ e2e_dev_env:
     - TARGET=headless protractor --baseUrl='http://localhost:8081' e2e/protractor.conf.js
     - /bin/bash -c '/usr/bin/killall -q kubectl; exit 0'
     - ps -ef|grep 'bash serve.sh'|awk '{print $2}'|xargs kill
-    - /bin/bash -c '/usr/bin/killall -q node; exit 0'
+    - ps -ef|grep 'live-server'|grep -v grep|awk '{print $2}'|xargs kill
     - skaffold delete
   cache:
     key: ${CI_COMMIT_SHORT_SHA}
