--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
         "npm": "^6.9.0",
         "parallel-webpack": "^2.3.0",
         "protractor": "^5.4.2",
+        "protractor-jasmine2-screenshot-reporter": "^0.5.0",
         "raw-loader": "^3.0.0",
         "rimraf": "^2.6.3",
         "sass": "^1.20.1",
@@ -66,6 +67,7 @@
         "whatwg-fetch": "^3.0.0"
     },
     "dependencies": {
+        "@google-cloud/storage": "^3.2.1",
         "@google-cloud/translate": "^4.1.3",
         "acorn": "^5.4.1",
         "ag-grid-community": "^21.1.0",
