--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
         "detect-node": "^2.0.4",
         "dompurify": "^1.0.11",
         "dotenv": "^6.2.0",
+        "elastic-apm-node": "^2.16.2",
         "express": "~4.13.1",
         "express-session": "^1.15.6",
         "expression-eval": "git+https://github.com/acristu/expression-eval.git",
@@ -96,6 +97,7 @@
         "lodash": "^4.17.11",
         "md5": "^2.2.1",
         "mime": "^2.4.4",
+        "mkdirp": "^0.5.1",
         "module-alias": "^2.1.0",
         "moment": "^2.24.0",
         "morgan": "^1.6.1",
