--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -8,11 +8,14 @@ build:
       manual:
       # Sync all the javascript files that are in the dist-be folder
       # with the container's root
-      - src: 'dist-be/**/*.js'
+      - src: 'dist-be/**/*.js*'
         dest: .
     docker:
       dockerfile: Dockerfile.be
       buildArgs: {}
+deploy:
+  kustomize:
+    path: k8s/overlays/production
 profiles:
   - name: dev
     patches:
@@ -20,16 +23,19 @@ profiles:
         path: /build/artifacts/0/docker/buildArgs
         value:
           BUILD_DEVELOPMENT: 1
+      - op: replace
+        path: /deploy/kustomize/path
+        value: k8s/overlays/development
       - op: add
         path: /portForward
         value:
           - resourceType: service
-            resourceName: lb
-            namespace: default
-            port: 80
-            localPort: 8085
-          - resourceType: service
             resourceName: git
             namespace: default
-            port: 80
+            port: 8085
             localPort: 8086
+  - name: staging
+    patches:
+      - op: replace
+        path: /deploy/kustomize/path
+        value: k8s/overlays/development
