--- a/k8s/overlays/development/patches/lb-deployment.yaml
+++ b/k8s/overlays/development/patches/lb-deployment.yaml
@@ -9,4 +9,4 @@ spec:
       - name: lb
         env:
         - name: BRANCH_NAME
-          value: aeafeb1f61d78ff9e21e5ec33c8559044e6d4ed0/v1 #TBD_CI_COMMIT_SHA
+          value: tdev-acr #TBD_TENANT_NAME
