--- a/k8s/overlays/production/patches/lb-deployment.yaml
+++ b/k8s/overlays/production/patches/lb-deployment.yaml
@@ -8,5 +8,5 @@ spec:
       containers:
       - name: lb
         env:
-        - name: BRANCH_NAME
+        - name: ENV_NAME
           value: master
