--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
         "docker:be": "docker build -t formuladb-be -f Dockerfile.be . && docker tag formuladb-be registry.gitlab.com/metawiz/febe/formuladb-be:${npm_package_version} && docker tag formuladb-be registry.gitlab.com/metawiz/febe/formuladb-be:latest",
         "docker:fe": "docker build -t formuladb-maps -f Dockerfile.fe . && docker tag formuladb-fe registry.gitlab.com/metawiz/febe/formuladb-fe:${npm_package_version}",
         "docker:maps": "docker build -t formuladb-maps -f Dockerfile.maps . && docker tag formuladb-maps registry.gitlab.com/metawiz/febe/formuladb-maps:${npm_package_version}",
-        "skaffold": "skaffold dev -n \"tdev-${USER}\" -p dev --port-forward=true",
+        "skaffold": "KUBECONFIG=k8s/production-kube-config.conf skaffold dev -n \"tdev-${USER}\" -p dev --port-forward=true",
         "sass:watch": "sass --watch vvvebjs vvvebjs/scss/editor.scss:vvvebjs/css/editor.css",
         "serve": "bash ci/create-dev-tenant.sh \"tdev-${USER}\" && tmux new-session 'npm run compile:watch' ';' split-window -h 'npm run bundle:watch' ';' split-window 'bash serve.sh' ';' select-layout tiled ';' split-window -h 'npm run skaffold' ';' select-layout tiled",
         "test": "node jasmine.js",
@@ -82,6 +82,7 @@
         "d3": "^5.11.0",
         "debug": "^4.1.1",
         "detect-node": "^2.0.4",
+        "diff": "^4.0.1",
         "dompurify": "^1.0.11",
         "dotenv": "^6.2.0",
         "elastic-apm-node": "^2.16.2",
