--- a/k8s/overlays/development/patches/lb-deployment.yaml
+++ b/k8s/overlays/development/patches/lb-deployment.yaml
@@ -9,4 +9,4 @@ spec:
       - name: lb
         env:
         - name: ORGANIZ_NAME
-          value: tdev-acr #TBD_ENV_NAME
+          value: production #TBD_ENV_NAME
