--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -36,3 +36,8 @@ profiles:
       - op: replace
         path: /deploy/kustomize/path
         value: k8s/overlays/production
+  - name: biz
+    patches:
+      - op: replace
+        path: /deploy/kustomize/path
+        value: k8s/overlays/biz
