renamed ORGANIZ to ENV

--- a/k8s/overlays/biz/patches/be-deployment.yaml
+++ b/k8s/overlays/biz/patches/be-deployment.yaml
@@ -8,5 +8,5 @@ spec:
       containers:
       - name: be
         env:
-        - name: ORGANIZ_NAME
+        - name: FRMDB_ENV_NAME
           value: biz
