--- a/k8s/overlays/production/patches/lb-deployment.yaml
+++ b/k8s/overlays/production/patches/lb-deployment.yaml
@@ -8,5 +8,5 @@ spec:
       containers:
       - name: lb
         env:
-        - name: ORGANIZ_NAME
+        - name: FRMDB_ENV_NAME
           value: production
