Some work. start removing LB and move ingress on BE.

--- a/k8s/overlays/staging/patches/ingress.yaml
+++ b/k8s/overlays/staging/patches/ingress.yaml
@@ -16,5 +16,5 @@ spec:
       paths:
       - path: /
         backend:
-          serviceName: lb
-          servicePort: 8085
+          serviceName: be
+          servicePort: 8084
