--- a/k8s/overlays/development/patches/be-deployment.yaml
+++ b/k8s/overlays/development/patches/be-deployment.yaml
@@ -8,5 +8,7 @@ spec:
       containers:
       - name: be
         env:
+        - name: FRMDB_AUTH_ENABLED
+          value: "false"
         - name: ORGANIZ_NAME
-          value: tdev-acr #TBD_ENV_NAME
+          value: tdev-loi #TBD_ENV_NAME
