--- a/k8s/overlays/production/patches/ingress.yaml
+++ b/k8s/overlays/production/patches/ingress.yaml
@@ -19,12 +19,12 @@ spec:
       paths:
       - path: /
         backend:
-          serviceName: lb
-          servicePort: 8085
+          serviceName: be
+          servicePort: 8084
   - host: www.formuladb.io
     http:
       paths:
       - path: /
         backend:
-          serviceName: lb
-          servicePort: 8085
+          serviceName: be
+          servicePort: 8084
