--- a/k8s/base/kustomization.yaml
+++ b/k8s/base/kustomization.yaml
@@ -6,4 +6,5 @@ resources:
 - resources/formuladb-online-https-secret.yaml
 - resources/pg-persistence-persistentvolumeclaim.yaml 
 - resources/service-account-secret.yaml
+- resources/pg-backup-deployment.yaml
 #wildcard support removed for some reason https://github.com/kubernetes-sigs/kustomize/issues/119
