--- a/k8s/overlays/staging/kustomization.yaml
+++ b/k8s/overlays/staging/kustomization.yaml
@@ -2,5 +2,6 @@ bases:
 - ../../base
 patches:
 - patches/be-deployment.yaml
+- patches/pg-backup-deployment.yaml
 resources:
 - resources/ingress.yaml
