--- a/k8s/overlays/client/patches/pg-backup-deployment.yaml
+++ b/k8s/overlays/client/patches/pg-backup-deployment.yaml
@@ -11,4 +11,4 @@ spec:
           - name: postgresql-cloud-dump
             env:
             - name: ORGANIZ_NAME
-              value: biz
+              value: client #TBD_ENV_NAME
