--- a/package.json
+++ b/package.json
@@ -70,7 +70,9 @@
         "whatwg-fetch": "^3.0.0"
     },
     "dependencies": {
+        "@ffmpeg-installer/ffmpeg": "^1.0.20",
         "@google-cloud/storage": "^3.2.1",
+        "@google-cloud/text-to-speech": "^1.3.0",
         "@google-cloud/translate": "^4.1.3",
         "acorn": "^5.4.1",
         "ag-grid-community": "^21.1.0",
@@ -92,6 +94,7 @@
         "express": "~4.13.1",
         "express-session": "^1.15.6",
         "expression-eval": "git+https://github.com/acristu/expression-eval.git",
+        "fluent-ffmpeg": "^2.1.2",
         "formulajs": "git+https://github.com/acristu/formula.js.git",
         "fuse.js": "^3.3.0",
         "http-proxy-middleware": "^0.19.1",
@@ -105,6 +108,7 @@
         "module-alias": "^2.1.0",
         "moment": "^2.24.0",
         "morgan": "^1.6.1",
+        "mp3-duration": "^1.1.0",
         "node-fetch": "^2.6.0",
         "nodemon": "^1.19.1",
         "passport": "^0.4.0",
@@ -113,6 +117,7 @@
         "pg-promise": "8.2.1",
         "pouchdb-collate": "^7.0.0",
         "serve-favicon": "~2.3.0",
+        "shelljs": "^0.8.3",
         "short-uuid": "^3.1.0",
         "source-map-support": "^0.5.12",
         "tslib": "^1.9.3",
