--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "author": "",
     "license": "ISC",
     "devDependencies": {
-        "@tbranyen/jsdom": "^13.0.0",
         "@types/d3": "^5.7.2",
         "@types/jasmine": "^3.3.12",
         "@types/jquery": "^3.3.29",
@@ -34,6 +33,7 @@
         "@types/node": "^12.7.1",
         "browser-sync": "^2.26.7",
         "concurrently": "^4.1.0",
+        "custom-elements-module": "^1.0.0",
         "document-register-element": "^1.13.2",
         "fetch-mock": "^7.3.6",
         "glob": "^7.1.4",
@@ -42,7 +42,7 @@
         "is-wsl": "^2.1.0",
         "jasmine": "^3.4.0",
         "jasmine-spec-reporter": "^4.2.1",
-        "jsdom": "^15.1.0",
+        "jsdom": "^15.1.1",
         "jsdom-devtools-formatter": "^1.0.0",
         "jsdom-global": "^3.0.2",
         "live-server": "^1.2.1",
