--- a/k8s/overlays/development/patches/be-deployment.yaml
+++ b/k8s/overlays/development/patches/be-deployment.yaml
@@ -9,4 +9,4 @@ spec:
       - name: be
         env:
         - name: FRMDB_ENV_NAME
-          value: biz #TBD_ENV_NAME
+          value: tdev-acr #TBD_ENV_NAME
