e2e: added cards data binding, repeat 7 cards with img and text

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -65,6 +65,7 @@ test_postgres:
 
 test_stress:
   stage: test_stress
+  retry: 4
   script:
     - ./ci/jobs.sh $CI_JOB_NAME
   <<: *cache_node_modules_and_artifacts
