--- a/k8s/base/resources/be-deployment.yaml
+++ b/k8s/base/resources/be-deployment.yaml
@@ -40,7 +40,7 @@ spec:
         - name: service-account-credentials
           mountPath: /etc/gcp
           readOnly: true
-        - mountPath: /wwwroot
+        - mountPath: /wwwroot/git
           name: git-persistence
           # subPath: gitroot
       volumes:
@@ -50,6 +50,9 @@ spec:
           items:
           - key: sa_json
             path: sa_credentials.json
+      - name: git-persistence
+        persistentVolumeClaim:
+          claimName: git-persistence
       restartPolicy: Always
       imagePullSecrets:
         - name: regcred
