--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "FormulaDB low code platform",
     "scripts": {
         "start": "bash scripts/init-be.sh && node --inspect=0.0.0.0:9231 dist-be/frmdb-be.js",
-        "start_dev": "nodemon --watch /dist-be --inspect=0.0.0.0:9231 dist-be/frmdb-be.js",
+        "start_dev": "bash scripts/init-be.sh && nodemon --watch /dist-be --inspect=0.0.0.0:9231 dist-be/frmdb-be.js",
         "compile": "tsc --sourceMap -p .",
         "compile:watch": "npm run compile -- -w",
         "bundle": "webpack",
