--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
         "docker:fe": "docker build -t formuladb-maps -f Dockerfile.fe . && docker tag formuladb-fe registry.gitlab.com/metawiz/febe/formuladb-fe:${npm_package_version}",
         "docker:maps": "docker build -t formuladb-maps -f Dockerfile.maps . && docker tag formuladb-maps registry.gitlab.com/metawiz/febe/formuladb-maps:${npm_package_version}",
         "skaffold": "KUBECONFIG=k8s/production-kube-config.conf skaffold dev -n \"`git branch|grep '^*'|cut -d ' ' -f2`\" -p dev --port-forward=true",
-        "sass:watch": "sass --watch vvvebjs vvvebjs/scss/editor.scss:vvvebjs/css/editor.css",
+        "sass:watch": "sass --watch formuladb-editor formuladb-editor/scss/editor.scss:formuladb-editor/css/editor.css",
         "serve": "bash ci/prepare-env.sh && bash scripts/prepare-env.sh && tmux new-session 'npm run compile:watch' ';' split-window -h 'npm run bundle:watch' ';' split-window 'bash serve.sh' ';' select-layout tiled ';' split-window -h 'npm run skaffold' ';' select-layout tiled",
         "test": "node jasmine.js",
         "webdriver-update": "webdriver-manager update",
