--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
         "test": "node jasmine.js",
         "webdriver-update": "webdriver-manager update",
         "test:e2e": "protractor e2e/protractor.conf.js",
-        "e2e:data": "FRMDB_STORAGE=postgres node tsc-out/test/src/load_test_data.js",
+        "e2e:data": "FRMDB_STORAGE=postgres node tsc-out/test/src/load_test_data.js 2> /dev/null ; KUBECONFIG=k8s/production-kube-config.conf kubectl run dumpdb -it --rm --restart=Never -n tdev-${USER} --image=postgres  -- sh -c 'PGPASSWORD=postgres pg_dump -h db -U postgres postgres' | grep -v pod.*deleted > k8s/pg_dump.sql",
         "dev:be": "ts-node-dev --respawn --transpileOnly ./be/src/server.ts",
         "generate-icons": "icon-font-generator -p frmdb-i fe/img/icons/*.svg -o fe/icons"
     },
