--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -35,6 +35,20 @@ profiles:
       - op: replace
         path: /deploy/kustomize/path
         value: k8s/overlays/development
+      # - op: add
+      #   path: /build/artifacts
+      #   value:
+      #     - image: registry.gitlab.com/metawiz/febe/formuladb-nginx
+      #       context: .
+      #       sync:
+      #         manual:
+      #         - src: 'formuladb-static/**/*'
+      #           dest: /usr/share/nginx/html/
+      #         - src: 'formuladb-themes/**/*'
+      #           dest: /usr/share/nginx/html/
+      #       docker:
+      #         dockerfile: Dockerfile.nginx
+      #         buildArgs: {}
   - name: staging
     patches:
       - op: replace
