--- a/k8s/overlays/development/kustomization.yaml
+++ b/k8s/overlays/development/kustomization.yaml
@@ -4,3 +4,5 @@ patches:
 - patches/be-deployment.yaml
 resources:
 - resources/ingress.yaml
+- resources/nginx-deployment.yaml
+- resources/nginx-service.yaml
