--- a/k8s/overlays/development/patches/be-deployment.yaml
+++ b/k8s/overlays/development/patches/be-deployment.yaml
@@ -10,3 +10,5 @@ spec:
         env:
         - name: FRMDB_ENV_NAME
           value: 208-git-storage-for-tracking-history #TBD_ENV_NAME
+        - name: FRMDB_IS_DEV_ENV
+          value: "true"
