--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "devDependencies": {
         "@ffmpeg-installer/ffmpeg": "^1.0.20",
         "@google-cloud/text-to-speech": "^1.3.0",
+        "@types/bootstrap": "^4.3.1",
         "@types/d3": "^5.7.2",
         "@types/jasmine": "^3.3.12",
         "@types/jquery": "^3.3.29",
