--- a/k8s/base/kustomization.yaml
+++ b/k8s/base/kustomization.yaml
@@ -1,3 +1,4 @@
+namespace: 135-login-roles-permissions-create-organization #TBD_ENV_NAME
 resources:
 - resources/be-deployment.yaml
 - resources/be-service.yaml
@@ -9,3 +10,11 @@ resources:
 - resources/service-account-secret.yaml
 - resources/pg-backup-deployment.yaml
 #wildcard support removed for some reason https://github.com/kubernetes-sigs/kustomize/issues/119
+vars:
+- name: NAMESPACE_NAME
+  objref:
+    kind: Deployment
+    name: be
+    apiVersion: extensions/v1beta1
+  fieldref:
+    fieldpath: metadata.namespace
