--- a/k8s/overlays/development/patches/be-deployment.yaml
+++ b/k8s/overlays/development/patches/be-deployment.yaml
@@ -9,6 +9,6 @@ spec:
       - name: be
         env:
         - name: FRMDB_ENV_NAME
-          value: 135-login-roles-permissions-create-organization #TBD_ENV_NAME
+          value: $(NAMESPACE_NAME)
         - name: FRMDB_IS_DEV_ENV
           value: "true"
