--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -54,7 +54,7 @@
         "**/CVS": true,
         "**/.DS_Store": true,
         "dist-be/**/*": true,
-        "dist-fe/**/*": true,
+        "formuladb/**/*": true,
         "tsc-out/**/*": true,
     },
     "zenMode.hideTabs": false,
