--- a/k8s/overlays/staging/patches/be-deployment.yaml
+++ b/k8s/overlays/staging/patches/be-deployment.yaml
@@ -10,3 +10,5 @@ spec:
         env:
         - name: FRMDB_ENV_NAME
           value: staging
+        - name: FRMDB_IS_PROD_ENV
+          value: "true"
