--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
         "jsdom": "^15.1.1",
         "jsdom-devtools-formatter": "^1.0.0",
         "jsdom-global": "^3.0.2",
+        "line-awesome": "^1.0.2",
         "live-server": "^1.2.1",
         "lolex": "^4.1.0",
         "mp3-duration": "^1.1.0",
@@ -124,6 +125,7 @@
         "pg-promise": "8.2.1",
         "pouchdb-collate": "^7.0.0",
         "serve-favicon": "~2.3.0",
+        "serve-index": "^1.9.1",
         "short-uuid": "^3.1.0",
         "source-map-support": "^0.5.12",
         "tslib": "^1.9.3",
