--- a/k8s/extras/elasticstack/metricbeat-kubernetes.yaml
+++ b/k8s/extras/elasticstack/metricbeat-kubernetes.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: metricbeat-config
+  name: metricbeat-daemonset-config
   labels:
     k8s-app: metricbeat
 data:
@@ -22,7 +22,6 @@ data:
       host: "kibana-kibana:5601" 
     setup.dashboards:
       enabled: true
-
 ---
 apiVersion: v1
 kind: ConfigMap
@@ -66,7 +65,14 @@ data:
         - container
         - volume
       period: 10s
+      host: ${NODE_NAME}
       hosts: ["localhost:10255"]
+    - module: kubernetes
+      metricsets:
+        - proxy
+      period: 10s
+      host: ${NODE_NAME}
+      hosts: ["localhost:10249"]
 ---
 # Deploy a Metricbeat instance per node for node metrics retrieval
 apiVersion: extensions/v1beta1
@@ -98,10 +104,10 @@ spec:
           value: formuladb-master
         - name: ELASTICSEARCH_PORT
           value: "9200"
-        - name: POD_NAMESPACE
+        - name: NODE_NAME
           valueFrom:
             fieldRef:
-              fieldPath: metadata.namespace
+              fieldPath: spec.nodeName
         securityContext:
           runAsUser: 0
         resources:
@@ -139,16 +145,35 @@ spec:
       - name: config
         configMap:
           defaultMode: 0600
-          name: metricbeat-config
+          name: metricbeat-daemonset-config
       - name: modules
         configMap:
           defaultMode: 0600
           name: metricbeat-daemonset-modules
-      # We set an `emptyDir` here to ensure the manifest will deploy correctly.
-      # It's recommended to change this to a `hostPath` folder, to ensure internal data
-      # files survive pod changes (ie: version upgrade)
       - name: data
-        emptyDir: {}
+        hostPath:
+          path: /var/lib/metricbeat-data
+          type: DirectoryOrCreate
+---
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: metricbeat-deployment-config
+  labels:
+    k8s-app: metricbeat
+data:
+  metricbeat.yml: |-
+    metricbeat.config.modules:
+      # Mounted `metricbeat-daemonset-modules` configmap:
+      path: ${path.config}/modules.d/*.yml
+      # Reload module configs as they change:
+      reload.enabled: false
+
+    processors:
+      - add_cloud_metadata:
+
+    output.elasticsearch:
+      hosts: ['${ELASTICSEARCH_HOST:elasticsearch}:${ELASTICSEARCH_PORT:9200}']
 ---
 apiVersion: v1
 kind: ConfigMap
@@ -169,6 +194,7 @@ data:
         # Uncomment this to get k8s events:
         #- event
       period: 10s
+      host: ${NODE_NAME}
       hosts: ["metrics-server.kube-system:443"]
 ---
 # Deploy singleton instance in the whole cluster for some unique data sources, like kube-state-metrics
@@ -185,6 +211,8 @@ spec:
         k8s-app: metricbeat
     spec:
       serviceAccountName: metricbeat
+      hostNetwork: true
+      dnsPolicy: ClusterFirstWithHostNet
       containers:
       - name: metricbeat
         image: docker.elastic.co/beats/metricbeat:7.4.2
@@ -197,10 +225,10 @@ spec:
           value: formuladb-master
         - name: ELASTICSEARCH_PORT
           value: "9200"
-        - name: POD_NAMESPACE
+        - name: NODE_NAME
           valueFrom:
             fieldRef:
-              fieldPath: metadata.namespace
+              fieldPath: spec.nodeName
         securityContext:
           runAsUser: 0
         resources:
@@ -221,7 +249,7 @@ spec:
       - name: config
         configMap:
           defaultMode: 0600
-          name: metricbeat-config
+          name: metricbeat-deployment-config
       - name: modules
         configMap:
           defaultMode: 0600
@@ -233,8 +261,8 @@ metadata:
   name: metricbeat
 subjects:
 - kind: ServiceAccount
-  name: metricbeat
   namespace: default
+  name: metricbeat
 roleRef:
   kind: ClusterRole
   name: metricbeat
@@ -247,18 +275,28 @@ metadata:
   labels:
     k8s-app: metricbeat
 rules:
-- apiGroups: ["", apps] # "" indicates the core API group
+- apiGroups: [""]
   resources:
+  - nodes
   - namespaces
   - events
   - pods
-  - nodes
-  - deployments
+  verbs: ["get", "list", "watch"]
+- apiGroups: ["extensions"]
+  resources:
   - replicasets
+  verbs: ["get", "list", "watch"]
+- apiGroups: ["apps"]
+  resources:
+  - statefulsets
+  - deployments
+  verbs: ["get", "list", "watch"]
+- apiGroups:
+  - ""
+  resources:
+  - nodes/stats
   verbs:
   - get
-  - watch
-  - list
 ---
 apiVersion: v1
 kind: ServiceAccount
