--- a/k8s/extras/elasticstack/metricbeat-kubernetes.yaml
+++ b/k8s/extras/elasticstack/metricbeat-kubernetes.yaml
@@ -3,6 +3,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: metricbeat-daemonset-config
+  namespace: kube-system
   labels:
     k8s-app: metricbeat
 data:
@@ -19,7 +20,7 @@ data:
     output.elasticsearch:
       hosts: ['${ELASTICSEARCH_HOST:elasticsearch}:${ELASTICSEARCH_PORT:9200}']
     setup.kibana:
-      host: "kibana-kibana:5601" 
+      host: "kibana-kibana.default:5601" 
     setup.dashboards:
       enabled: true
 ---
@@ -27,6 +28,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: metricbeat-daemonset-modules
+  namespace: kube-system
   labels:
     k8s-app: metricbeat
 data:
@@ -67,6 +69,8 @@ data:
       period: 10s
       host: ${NODE_NAME}
       hosts: ["localhost:10255"]
+      enabled: true
+      add_metadata: true
     - module: kubernetes
       metricsets:
         - proxy
@@ -79,6 +83,7 @@ apiVersion: extensions/v1beta1
 kind: DaemonSet
 metadata:
   name: metricbeat
+  namespace: kube-system
   labels:
     k8s-app: metricbeat
 spec:
@@ -101,7 +106,7 @@ spec:
         ]
         env:
         - name: ELASTICSEARCH_HOST
-          value: formuladb-master
+          value: formuladb-master.default
         - name: ELASTICSEARCH_PORT
           value: "9200"
         - name: NODE_NAME
@@ -159,6 +164,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: metricbeat-deployment-config
+  namespace: kube-system
   labels:
     k8s-app: metricbeat
 data:
@@ -179,6 +185,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: metricbeat-deployment-modules
+  namespace: kube-system
   labels:
     k8s-app: metricbeat
 data:
@@ -189,19 +196,41 @@ data:
         - state_node
         - state_deployment
         - state_replicaset
+        - state_statefulset
         - state_pod
         - state_container
+        - state_cronjob
         # Uncomment this to get k8s events:
-        #- event
+        - event
       period: 10s
       host: ${NODE_NAME}
-      hosts: ["metrics-server.kube-system:443"]
+      hosts: ["kube-state-metrics:8080"]
+      add_metadata: true
+      enabled: true
+    - module: kubernetes
+      enabled: true
+      metricsets:
+        - apiserver
+      hosts: ["https://${KUBERNETES_SERVICE_HOST}:${KUBERNETES_SERVICE_PORT}"]
+    - module: kubernetes
+      enabled: true
+      metricsets:
+        - controllermanager
+      hosts: ["http://localhost:10252"]
+      period: 10s
+    - module: kubernetes
+      enabled: true
+      metricsets:
+        - scheduler
+      hosts: ["localhost:10251"]
+      period: 10s
 ---
 # Deploy singleton instance in the whole cluster for some unique data sources, like kube-state-metrics
 apiVersion: apps/v1beta1
 kind: Deployment
 metadata:
   name: metricbeat
+  namespace: kube-system
   labels:
     k8s-app: metricbeat
 spec:
@@ -222,7 +251,7 @@ spec:
         ]
         env:
         - name: ELASTICSEARCH_HOST
-          value: formuladb-master
+          value: formuladb-master.default
         - name: ELASTICSEARCH_PORT
           value: "9200"
         - name: NODE_NAME
@@ -261,8 +290,8 @@ metadata:
   name: metricbeat
 subjects:
 - kind: ServiceAccount
-  namespace: default
   name: metricbeat
+  namespace: kube-system
 roleRef:
   kind: ClusterRole
   name: metricbeat
@@ -289,6 +318,7 @@ rules:
 - apiGroups: ["apps"]
   resources:
   - statefulsets
+  - replicasets
   - deployments
   verbs: ["get", "list", "watch"]
 - apiGroups:
@@ -302,6 +332,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: metricbeat
+  namespace: kube-system
   labels:
     k8s-app: metricbeat
 ---
